sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:5: error: not found: value bool
    bool = false
    ^AlgBubbleSort2:9: error: not found: value bool
        bool = true
        ^